crates/plotnik-tests/tests/04-emit/bytecode/anchors/exact_between_siblings_impossible.txt
Q = (array
  (identifier)
  .!
  (identifier)
)
------------------ DIAGNOSTICS -------------------
error: no `array` places these children in this adjacency
 --> query.ptk:1:6
  |
1 | Q = (array
  |      ^^^^^
  |
help: `.!` allows no syntax-tree node in its gap — not even an anonymous token or comment; the soft anchor `.` skips those: `(array
        (identifier)
        .
        (identifier)
      )`
